<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Simple SMS Messenger</string>
    <string name="app_launcher_name">SMS Messenger</string>
    <string name="type_a_message">Type a message…</string>
    <string name="message_not_sent_short">Message not sent</string>
    <string name="message_not_sent_touch_retry">Not sent. Touch to retry.</string>
    <string name="message_sending_error">Your message to \'%s\' has not been sent</string>
    <string name="add_person">Add Person</string>
    <string name="attachment">Attachment</string>
    <string name="no_conversations_found">No stored conversations have been found</string>
    <string name="start_conversation">Start a conversation</string>
    <string name="reply">Reply</string>
    <string name="show_character_counter">Show a character counter at writing messages</string>
    <string name="loading_messages">Loading messages…</string>
    <string name="no_reply_support">Sender doesn\'t support replies</string>
    <string name="draft">Draft</string>
    <string name="sending">Sending…</string>
    <string name="pin_conversation">Pin to the top</string>
    <string name="unpin_conversation">Unpin</string>
    <string name="forward_message">Forward</string>
    <string name="compress_error">Unable to compress image to selected size</string>
    <!-- Attachments -->
    <string name="duplicate_item_warning">Duplicate item was not included</string>
    <!-- vCard -->
    <plurals name="and_other_contacts">
        <item quantity="one">and %d other</item>
        <item quantity="other">and %d others</item>
    </plurals>
    <!-- New conversation -->
    <string name="new_conversation">New conversation</string>
    <string name="add_contact_or_number">Add Contact or Number…</string>
    <string name="suggestions">Suggestions</string>
    <!-- Schedule send -->
    <string name="scheduled_message">Scheduled message</string>
    <string name="schedule_message">Schedule message</string>
    <string name="schedule_send">Schedule send</string>
    <string name="cancel_schedule_send">Cancel schedule send</string>
    <string name="must_pick_time_in_the_future">You must pick a time in the future</string>
    <string name="schedule_send_warning">Keep the phone on and make sure there is nothing killing the app while in background.</string>
    <string name="update_message">Update message</string>
    <string name="send_now">Send now</string>
    <!-- Notifications -->
    <string name="channel_received_sms">Received SMS</string>
    <string name="new_message">New message</string>
    <string name="mark_as_read">Mark as Read</string>
    <string name="mark_as_unread">Mark as Unread</string>
    <string name="me">Me</string>
    <!-- Confirmation dialog -->
    <string name="delete_whole_conversation_confirmation">Are you sure you want to delete all messages of this conversation?</string>
    <!-- Are you sure you want to delete 5 conversations? -->
    <plurals name="delete_conversations">
        <item quantity="one">%d conversation</item>
        <item quantity="other">%d conversations</item>
    </plurals>
    <!-- Are you sure you want to delete 5 messages? -->
    <plurals name="delete_messages">
        <item quantity="one">%d message</item>
        <item quantity="other">%d messages</item>
    </plurals>
    <!-- Settings -->
    <string name="lock_screen_visibility">Lock screen notification visibility</string>
    <string name="sender_and_message">Sender and message</string>
    <string name="sender_only">Sender only</string>
    <string name="enable_delivery_reports">Enable delivery reports</string>
    <string name="use_simple_characters">Remove accents and diacritics at sending messages</string>
    <string name="mms_file_size_limit">Resize sent MMS images</string>
    <string name="mms_file_size_limit_none">No limit</string>
    <string name="outgoing_messages">Outgoing messages</string>
    <string name="group_message_mms">Send group messages as MMS</string>
    <string name="send_long_message_mms">Send long messages as MMS</string>
    <!-- Export / Import -->
    <string name="messages">Messages</string>
    <string name="export_messages">Export messages</string>
    <string name="export_sms">Export SMS</string>
    <string name="export_mms">Export MMS</string>
    <string name="import_messages">Import messages</string>
    <string name="import_sms">Import SMS</string>
    <string name="import_mms">Import MMS</string>
    <string name="no_option_selected">You have to select at least one item</string>
    <!-- FAQ -->
    <string name="faq_1_title">Why does the app require access to the internet?</string>
    <string name="faq_1_text">Sadly it is needed for sending MMS attachments. Not being able to send MMS would be a really huge disadvantage compared to other apps, so we decided to go this way.
    However, as usually, there are no ads, tracking or analytics whatsoever, the internet is used only for sending MMS.</string>
    <string name="faq_2_title">The other end is not receiving my MMS, is there anything I can do about it?</string>
    <string name="faq_2_text">MMS size is limited by carriers, you can try setting a smaller limit in the app settings.</string>
    <string name="faq_3_title">Does the app support scheduled messages?</string>
    <string name="faq_3_text">Yes, you can schedule messages to be sent in the future by long pressing the Send button and picking the desired date and time.</string>
    <string name="get_started">Get Started</string>
    <string name="terms_of_use_message">By clicking \'Get Started\' you accept the Terms of Use and Privacy Policy</string>
    <string name="messages_privacy_description">We do not share or read your messages with others we just manage them in better ways and with extra features.</string>
    <string name="contacts_privacy_description">We do not share your contacts with others they are just used to manage your record in the app just like the default app.</string>
    <string name="contacts">Contacts</string>
    <string name="must_select_terms_and_condition">Must select terms and condition</string>
    <string name="privacy_policy_">Privacy Policy</string>
    <string name="terms_of_use">Terms of Use</string>
    <!--
        Haven't found some strings? There's more at
        https://github.com/SimpleMobileTools/Simple-Commons/tree/master/commons/src/main/res
    -->
</resources>
