<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/md_grey_black"
    tools:context=".activities.AgreementA">


    <LinearLayout
        android:id="@+id/toolbar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:gravity="center"
        android:orientation="vertical">

        <ImageView
            android:layout_width="@dimen/_80sdp"
            android:layout_height="@dimen/_80sdp"
            android:layout_marginTop="@dimen/_60sdp"
            android:src="@mipmap/ic_launcher_round" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_8sdp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:gravity="center"
                android:includeFontPadding="false"
                android:text="@string/app_name"
                android:textColor="@color/md_grey_white"
                android:textSize="@dimen/_18sdp" />


        </LinearLayout>

    </LinearLayout>


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/toolbar"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_above="@+id/tabTermsCondition"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:orientation="vertical">

            <RelativeLayout
                android:layout_marginTop="@dimen/_22sdp"
                android:layout_marginHorizontal="@dimen/_12sdp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <ImageView
                    android:id="@+id/ivContacts"
                    android:layout_width="@dimen/_32sdp"
                    android:layout_height="@dimen/_32sdp"
                    android:layout_alignParentTop="true"
                    android:layout_centerVertical="true"
                    android:src="@mipmap/ic_shortcut_people" />

                <LinearLayout
                    android:layout_alignParentTop="true"
                    android:layout_alignParentEnd="true"
                    android:layout_toEndOf="@+id/ivContacts"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:gravity="start|center_vertical"
                        android:includeFontPadding="false"
                        android:paddingHorizontal="@dimen/_6sdp"
                        android:text="@string/contacts"
                        android:textStyle="bold"
                        android:textColor="@color/md_grey_white"
                        android:textSize="@dimen/_15sdp" />


                    <TextView
                        android:layout_marginTop="@dimen/_8sdp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:gravity="start|center_vertical"
                        android:includeFontPadding="false"
                        android:paddingHorizontal="@dimen/_6sdp"
                        android:text="@string/contacts_privacy_description"
                        android:textColor="@color/md_grey_white"
                        android:textSize="@dimen/_12sdp" />

                </LinearLayout>


            </RelativeLayout>


            <RelativeLayout
                android:layout_marginTop="@dimen/_22sdp"
                android:layout_marginHorizontal="@dimen/_12sdp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <ImageView
                    android:id="@+id/ivMessenger"
                    android:layout_width="@dimen/_32sdp"
                    android:layout_height="@dimen/_32sdp"
                    android:layout_alignParentTop="true"
                    android:layout_centerVertical="true"
                    android:src="@drawable/ic_agree_msg" />

                <LinearLayout
                    android:layout_alignParentTop="true"
                    android:layout_alignParentEnd="true"
                    android:layout_toEndOf="@+id/ivMessenger"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:gravity="start|center_vertical"
                        android:includeFontPadding="false"
                        android:paddingHorizontal="@dimen/_6sdp"
                        android:text="@string/messages"
                        android:textStyle="bold"
                        android:textColor="@color/md_grey_white"
                        android:textSize="@dimen/_15sdp" />


                    <TextView
                        android:layout_marginTop="@dimen/_8sdp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:gravity="start|center_vertical"
                        android:includeFontPadding="false"
                        android:paddingHorizontal="@dimen/_6sdp"
                        android:text="@string/messages_privacy_description"
                        android:textColor="@color/md_grey_white"
                        android:textSize="@dimen/_12sdp" />

                </LinearLayout>


            </RelativeLayout>


        </LinearLayout>


        <RelativeLayout
            android:id="@+id/tabTermsCondition"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_above="@+id/tabBottom"
            android:layout_marginTop="@dimen/_12sdp"
            android:paddingStart="@dimen/_12sdp"
            android:paddingEnd="@dimen/_22sdp">

            <CheckBox
                android:id="@+id/chBox"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_centerVertical="true" />

            <TextView
                android:id="@+id/tvTermsOfUse"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_centerVertical="true"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="@dimen/_12sdp"
                android:layout_toEndOf="@+id/chBox"
                android:gravity="start|center_vertical"
                android:includeFontPadding="false"
                android:text="@string/terms_of_use_message"
                android:textColor="@color/md_grey_white"
                android:textSize="@dimen/_12sdp" />

        </RelativeLayout>


        <RelativeLayout
            android:id="@+id/tabBottom"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:layout_marginStart="@dimen/_22sdp"
            android:layout_marginTop="@dimen/_12sdp"
            android:layout_marginEnd="@dimen/_22sdp"
            android:layout_marginBottom="@dimen/_22sdp">

            <RelativeLayout
                android:id="@+id/tabMainAgreeAndContinue"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_36sdp"
                android:layout_alignParentEnd="true"
                android:layout_centerVertical="true"
                android:background="@drawable/ractengle_lesser_round_solid_white"
                android:elevation="@dimen/_2sdp">


                <RelativeLayout
                    android:id="@+id/tabGetStarted"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_alignParentStart="true"
                    android:layout_alignParentEnd="true"
                    android:layout_centerVertical="true"
                    android:background="@drawable/dr_lesser_ractengle_ripple">


                    <TextView
                        android:id="@+id/tvGetStarted"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_alignParentStart="true"
                        android:layout_alignParentEnd="true"
                        android:layout_centerVertical="true"
                        android:gravity="center"
                        android:includeFontPadding="false"
                        android:paddingHorizontal="@dimen/_12sdp"
                        android:text="@string/get_started"
                        android:textAllCaps="true"
                        android:textColor="@color/md_grey_white"
                        android:textSize="@dimen/_13sdp"
                        android:textStyle="bold" />


                </RelativeLayout>


            </RelativeLayout>

        </RelativeLayout>


    </RelativeLayout>


</RelativeLayout>
